--- a/dev-environment/Makefile
+++ b/dev-environment/Makefile
@@ -6,7 +6,7 @@
 #    By: jyao <jyao@student.42abudhabi.ae>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/10 10:29:56 by jyao              #+#    #+#              #
-#    Updated: 2025/01/11 11:07:15 by jyao             ###   ########.fr        #
+#    Updated: 2025/02/05 09:10:33 by jyao             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,9 +14,12 @@ DOCKERFILE_PATH = ./
 DOCKERFILE_NAME = Dockerfile
 DOCKERFILE_FILE = $(DOCKERFILE_PATH)$(DOCKERFILE_NAME)
 DOCKERFILE_BUILD_CONTEXT = ./
-IMAGE_NAME = python-dev-env:latest
-CONTAINER_NAME = python-dev-env-c
+IMAGE_NAME = eand-intern-dev:latest
+CONTAINER_NAME = eand-intern-dev-c
 CONTAINER_WORKDIR = /workdir
+CONTAINER_PORTS = -p 443:443 -p 80:80 -p 8888:8888
+# CONTAINER_PORTS = --network host
+# CONTAINER_PORTS = -P
 
 .PHONY: all usage build start clean fclean
 
@@ -24,11 +27,11 @@ all: usage
 
 usage:
 	@echo "USAGE:"
-	@echo "    <make build>              builds the python development environment docker image"
-	@echo "    <make start [PATH]>       starts the python development environment container at the current working directory"
+	@echo "    <make build>              builds the oculus development environment docker image"
+	@echo "    <make start [PATH]>       starts the oculus development environment container at the current working directory"
 	@echo "                              if [PATH] a full/absolute path is specified, the container will load all files at this location into the container instead"
-	@echo "    <make clean>              clears the python development environment docker container"
-	@echo "    <make fclean>             clears the python development environment docker container and image"
+	@echo "    <make clean>              clears the oculus development environment docker container"
+	@echo "    <make fclean>             clears the oculus development environment docker container and image"
 
 
 build:
@@ -42,7 +45,7 @@ start:
 ifeq ($(words $(MAKECMDGOALS)), 2)
 	mkdir -p $(word 2, $(MAKECMDGOALS))
 	docker run -it \
-	-p 443:443 -p 80:80 \
+	$(CONTAINER_PORTS) \
 	--name $(CONTAINER_NAME) \
 	--rm \
 	-w /workdir \
@@ -52,7 +55,7 @@ ifeq ($(words $(MAKECMDGOALS)), 2)
 else
 ifeq ($(words $(MAKECMDGOALS)), 1)
 	docker run -it \
-	-p 443:443 -p 80:80 \
+	$(CONTAINER_PORTS) \
 	--name $(CONTAINER_NAME) \
 	--rm \
 	-w /workdir \
